--- a/footer.html
+++ b/footer.html
@@ -105,22 +105,32 @@
           </div>
         </section>
       </main>
-
-      <footer style="height:300px; background-color: black;">
-        <h2 class="text-center pt-5">Ez footer</h2>
+      <footer class="bg-black text-light py-4">
         <div class="container-fluid">
             <div class="row">
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4 ">
-                    <h3>Elérhetőségek</h3>
+                  <h5 style="font-size: 0.9rem;">Iratkozz fel hírlevelünkre</h5>
+                  <form>
+                      <div class="mb-3">
+                          <input type="email" class="form-control" placeholder="Add meg az email címed" required>
+                      </div>
+                      <button type="submit" class="btn btn-primary" style="font-size: 0.9rem;">Küldés</button>
+                  </form>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4 ">
-                    <h3>Elhelyezkedés</h3>
+                  <h5 style="font-size: 0.9rem;">Elérhetőségek</h5>
+                  <p style="font-size: 0.8rem;">Email: info@példa.hu</p>
+                  <p style="font-size: 0.8rem;">Telefon: +36 30 123 4567</p>
+                  <p style="font-size: 0.8rem;">Cím: 6500 Baja, Bácska tér 1.</p>
                 </div>
                 <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4 ">
-                    <h3>Iratkozz fel hírlevelünkre</h3>
+                  <h5 style="font-size: 0.9rem;">Elhelyezkedés</h5>
+                  <iframe src="https://www.google.com/maps?q=6500+Baja,+B%C3%A1cska+t%C3%A9r+1.&output=embed" 
+                          width="100%" height="200" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+                  <p class="mt-2" style="font-size: 0.8rem;">6500 Baja, Bácska tér 1.</p>
                 </div>
             </div>
         </div>
-      </footer>
+    </footer>
 </body>
 </html> 
