Gyakran ismételt kérdések

--- a/footer.html
+++ b/footer.html
@@ -83,20 +83,22 @@
           <div class="container-fluid">
             <h1 class="text-center">Gyakran ismételt kérdések</h1>
             <details>
-              <summary>Mennyibe kerül?</summary>
-              <p>Teljesen ingyenes</p>
+              <summary>Mi az a Mindfit AI?</summary>
+              <p>A Mindfit AI egy innovatív platform, amely mesterséges intelligencia segítségével személyre szabott étrendet és edzéstervet kínál. </p>
             </details>
             <details>
-              <summary>Mennyibe kerül?</summary>
-              <p>Teljesen ingyenes</p>
+              <summary>Hogyan működik a Mindfit AI?</summary>
+              <p>A Mindfit AI rendszere az Ön által megadott információk (pl. életkor, súly, célok) alapján elemzi az adatokat és ajánlásokat ad személyre szabott étrendre és edzéstervre.</p>
             </details>
             <details>
-              <summary>Mennyibe kerül?</summary>
-              <p>Teljesen ingyenes</p>
+              <summary>Milyen típusú étrendeket és edzésterveket kínál a Mindfit AI?</summary>
+              <p>Fogyás
+                Izomtömeg növelés
+                Általános egészség megőrzés</p>
             </details>
             <details>
-              <summary>Mennyibe kerül?</summary>
-              <p>Teljesen ingyenes</p>
+              <summary>Milyen típusú eszközökkel használhatom a Mindfit AI-t?</summary>
+              <p>A Mindfit AI weboldalunkon keresztül érhető el, amelyet bármilyen számítógépről vagy mobiltelefonról elérhet. A platformunk reszponzív, így mind asztali, mind mobil eszközökön kényelmesen használható.</p>
             </details>
             <details>
               <summary>Mennyibe kerül?</summary>
