--- a/adatkezeles.html
+++ b/adatkezeles.html
@@ -24,7 +24,7 @@
 
     <h3>Kezelt adatok kategóriája</h3>
     <ul>
-        <li><strong>Név, érettségi éve, a TETT évad(ok):</strong> A Rendezvényen való részvétel biztosítása érdekében szükséges.</li>
+        <li><strong>Név:</strong> A Rendezvényen való részvétel biztosítása érdekében szükséges.</li>
         <li><strong>Értesítési e-mail cím:</strong> A Rendezvényre vonatkozó tájékoztató információk megküldése.</li>
         <li><strong>Különleges étrend igény:</strong> A Rendezvény étel- és italkínálatának biztosítása.</li>
         <li><strong>Tömegfelvételek:</strong> A Rendezvény népszerűsítése érdekében.</li>
