--- a/footer.html
+++ b/footer.html
@@ -16,7 +16,7 @@
               <h5>Iratkozz fel hírlevelünkre!</h5>
               <form>
                 <div class="footer-emailbox">
-                  <input type="email" class="footer-emailmezo" id="Email" name="Email" placeholder="fit@gmail.com" autocomplete="off">
+                  <input type="email" class="footer-emailmezo" id="Email" name="Email" placeholder="pelda@mind.fit" autocomplete="off">
                   <input class="footer-emailgomb" value="Küldés" type="submit">
                 </div>
               </form>
