--- a/adatkezeles.html
+++ b/adatkezeles.html
@@ -20,14 +20,14 @@
     <h1>Adatkezelési Tájékoztató</h1>
 
     <h2>A. Adatkezelésekre vonatkozó alapvető információk célonként</h2>
-    <p>Az alábbi táblázatban található a Regisztrációval és a Rendezvénnyel kapcsolatos adatkezelésre vonatkozó valamennyi fontos alapinformáció.</p>
+    <p>Az alábbi táblázatban található a Regisztrációval  kapcsolatos adatkezelésre vonatkozó valamennyi fontos alapinformáció.</p>
 
     <h3>Kezelt adatok kategóriája</h3>
     <ul>
-        <li><strong>Név:</strong> A Rendezvényen való részvétel biztosítása érdekében szükséges.</li>
-        <li><strong>Értesítési e-mail cím:</strong> A Rendezvényre vonatkozó tájékoztató információk megküldése.</li>
-        <li><strong>Különleges étrend igény:</strong> A Rendezvény étel- és italkínálatának biztosítása.</li>
-        <li><strong>Tömegfelvételek:</strong> A Rendezvény népszerűsítése érdekében.</li>
+        <li><strong>Név:</strong> A  részvétel biztosítása érdekében szükséges.</li>
+        <li><strong>Értesítési e-mail cím:</strong> A tájékoztató információk megküldése.</li>
+        
+
     </ul>
 
     <h3>Adatkezelés jogalapja</h3>
