--- a/adatkezeles.html
+++ b/adatkezeles.html
@@ -3,18 +3,18 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adatkezelési Tájékoztató - Mindfit</title>
+    <title>Adatkezelési Tájékoztató - MindFit</title>
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
             line-height: 1.6;
             color: #333;
-            background: linear-gradient(135deg, #ff9a9e, #fad0c4);
+            background: linear-gradient(135deg, #a8e063, #56ab2f);
             padding: 20px;
         }
         h1, h2 {
-            color: #ff4081;
+            color: #2e7d32;
             text-align: center;
         }
         ul {
