--- a/adatkezeles.html
+++ b/adatkezeles.html
@@ -68,7 +68,7 @@
         Székhely: 1055 Budapest, Falk Miksa utca 9-11.<br>
         E-mail: ugyfelszolgalat@naih.hu</p>
 
-        <p>Ha kérdésed van, vedd fel velünk a kapcsolatot: <strong>[Kapcsolati e-mail cím]</strong></p>
+        <p>Ha kérdésed van, vedd fel velünk a kapcsolatot: <strong>turrmindfit@gmail.com</strong></p>
     </div>
 </body>
 </html>
