--- a/stresszkezeles.html
+++ b/stresszkezeles.html
@@ -42,12 +42,12 @@
             box-shadow: 0px 5px 15px rgba(0, 0, 0, 0.2);
             transition: transform 0.3s ease-in-out, box-shadow 0.3s ease-in-out;
             position: relative;
-            overflow: hidden;
+            overflow:visible;
             text-align: left;
             height: auto;
             display: flex;
             flex-direction: column;
-            justify-content: space-between;
+            
             font-size: 16px;
             line-height: 1.8;
         }
@@ -126,6 +126,11 @@
             <div class="card-footer">Az alvás szerepe</div>
         </div>
         <div class="card">
+            <h2>Pihentető hobbi és kikapcsolódás</h2>
+            <p>Olyan tevékenységeket végezz, amelyek örömet okoznak, például olvasás, zenehallgatás, festés vagy kertészkedés. Ezek a hobbik segítenek feltöltődni.</p>
+            <div class="card-footer">Relaxáló hobbik</div>
+        </div>
+        <div class="card">
             <h2>Légzőgyakorlatok</h2>
             <ul>
                 <li><strong>4-7-8 technika:</strong> Lélegezz be 4 másodpercig, tartsd bent 7 másodpercig, majd fújd ki 8 másodperc alatt. Ez segít a test ellazításában és a nyugodt állapot elérésében.</li>
@@ -144,11 +149,7 @@
             </ul>
             <div class="card-footer">Meditációs módszerek</div>
         </div>
-        <div class="card">
-            <h2>Pihentető hobbi és kikapcsolódás</h2>
-            <p>Olyan tevékenységeket végezz, amelyek örömet okoznak, például olvasás, zenehallgatás, festés vagy kertészkedés. Ezek a hobbik segítenek feltöltődni.</p>
-            <div class="card-footer">Relaxáló hobbik</div>
-        </div>
+       
     </div>
     <footer>
         <p>&copy; 2025 Stresszkezelés Tippek</p>
