--- a/adatkezeles.html
+++ b/adatkezeles.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Adatkezelési Tájékoztató - MindFit</title>
+    <link rel="icon" href="img/strong.png"></link:icon>
     <style>
         body {
             font-family: Arial, sans-serif;
