--- a/adatkezeles.html
+++ b/adatkezeles.html
@@ -3,15 +3,15 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Adatkezelési Tájékoztató - MindFit</title>
     <link rel="icon" href="img/strong.png"></link:icon>
+    <link rel="stylesheet" href="css/styles.css">
     <style>
         body {
             font-family: Arial, sans-serif;
             margin: 20px;
             line-height: 1.6;
             color: #333;
-            background: linear-gradient(135deg, #a8e063, #56ab2f);
+            background: var(--c);
             padding: 20px;
         }
         h1, h2 {
@@ -33,6 +33,7 @@
             box-shadow: 0px 4px 10px rgba(0, 0, 0, 0.1);
         }
     </style>
+    <title>Adatkezelési Tájékoztató - MindFit</title>
 </head>
 <body>
     <div class="container">
@@ -69,7 +70,7 @@
         Székhely: 1055 Budapest, Falk Miksa utca 9-11.<br>
         E-mail: ugyfelszolgalat@naih.hu</p>
 
-        <p>Ha kérdésed van, vedd fel velünk a kapcsolatot: <strong>Mindfit@gmail.com</strong></p>
+        <p>Ha kérdésed van, vedd fel velünk a kapcsolatot: <strong>turrmindfit@gmail.com</strong></p>
     </div>
 </body>
 </html>
