--- a/bodymap.html
+++ b/bodymap.html
@@ -7,18 +7,23 @@
 </head>
 <body>
   <section id="bodymap">
-    <div class="container">
-      <!-- Bal oldali nézet: hátsó -->
-      <div class="view">
-        <img src="img/man_musculature_back.png" usemap="#testmap" id="imgBack">
-        <canvas id="overlay1" width="600" height="1280"></canvas>
-      </div>
-    
-      <!-- Jobb oldali nézet: elülső -->
-      <div class="view">
-        <img src="img/man_musculature_front.png" usemap="#testmap2" id="imgFront">
-        <canvas id="overlay2" width="600" height="1280"></canvas>
-      </div>
+    <div class="container">   
+       <!--<div class="row"> </div>-->
+          <!--<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+          </div>-->
+            <!-- Bal oldali nézet: hátsó -->
+            <div class="view">
+              <img src="img/man_musculature_back.png" usemap="#testmap" id="imgBack">
+              <canvas id="overlay1" width="600" height="1280"></canvas>
+            </div>
+          <!--<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
+          </div>-->
+            <!-- Jobb oldali nézet: elülső -->
+            <div class="view">
+              <img src="img/man_musculature_front.png" usemap="#testmap2" id="imgFront">
+              <canvas id="overlay2" width="600" height="1280"></canvas>
+            </div>
+      
 
         <map name="testmap">
             <!-- Vádlik -->
