--- a/bodymap.html
+++ b/bodymap.html
@@ -2,8 +2,9 @@
 <html lang="hu">
 <head>
   <meta charset="UTF-8">
-  <title>Hátsó test - Vádli, comb, farizom</title>
+  <title>Bodymap</title>
   <link rel="stylesheet" href="/css/styles.css">
+  <link rel="icon" href="img/strong.png"></link:icon>
 </head>
 <body>
   <section id="bodymap">
@@ -729,8 +730,8 @@ const frontGroups = {
         ]
       },
       szaboizom: {
-        color: 'rgba(0, 128, 255, 0.4)',
-        selectedColor: 'rgba(0, 128, 255, 0.8)',
+        color: 'rgba(255, 0, 0, 0.4)',
+        selectedColor: 'rgba(255, 0, 0, 0.8)',
         areas: [
           [280,670,285,686,290,705,293,715,297,739,298,755,297,773,296,782,293,791,291,776,288,761,284,743,280,724,274,700,269,684,265,666,261,651,258,638,256,628,252,615,249,603,246,595,241,575,245,591,248,596,246,595,254,607,260,619,265,631,269,643,274,656,277,664,279,669],
           [264,902,260,910,257,918,254,925,254,929,254,937,260,929,265,922,269,911,274,901,280,887,283,878,285,869,287,862,285,854,283,853,280,862,277,870,276,875,273,883,268,892,265,899,261,907],
