--- a/footer.html
+++ b/footer.html
@@ -64,8 +64,8 @@
             </li>
           </ul>
         </div>
-        <div class="col-6 text-center">
-            <p class="m-0 p-0"> <a href="/adatkezelesi-tajekoztato" style="color: #fff;">Adatkezelési tájékoztató</a></p>
+        <div class="col-12 text-center">
+            <p class="m-0 p-0"> <a href="/adatkezelesi-tajekoztato" style="color: #fff;">Adatkezelési tájékoztató <!--Copyright &copy; 2025 mindfit.hu minden jog fenntartva--></a></p>
         </div>
       </div>
     </div>
