--- a/footer.html
+++ b/footer.html
@@ -1,4 +1,4 @@
-  <footer class="bg-black text-light py-4">
+  <footer class="bg-black text-light py-4 mt-3">
     <div class="container-fluid" id="footer-content">
         <div class="row">  
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4" id="footer-oszlop1">
@@ -65,7 +65,7 @@
           </ul>
         </div>
         <div class="col-6 text-center">
-            <p class="m-0 p-0"> <a href="/adatkezelesi-tajekoztato" style="color: #fff;">Adatkezelési tájékoztató</a></p>
+            <p class="m-0 p-0"> <a href="adatkezeles.php" style="color: #fff;" target="_blank">Adatkezelési tájékoztató</a></p>
         </div>
       </div>
     </div>
