--- a/header.html
+++ b/header.html
@@ -4,7 +4,7 @@
     <button class="navbar-toggler" type="button" data-bs-toggle="offcanvas" data-bs-target="#offcanvasNavbar" aria-controls="offcanvasNavbar" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
-    <div class="offcanvas offcanvas-end bg-dark" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel">
+    <div class="offcanvas offcanvas-end" tabindex="-1" id="offcanvasNavbar" aria-labelledby="offcanvasNavbarLabel" style="background-color: var(--f);">
       <div class="offcanvas-header">
         <h5 class="offcanvas-title text-white" id="offcanvasNavbarLabel">MindFit</h5>
         <button type="button" class="btn-close" data-bs-dismiss="offcanvas" aria-label="Close"></button>
@@ -22,6 +22,10 @@
           </li>
           <li class="nav-item">
             <a class="nav-link active text-white" aria-current="page" href="stresszkezeles.php">Stresszkezelés</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link active text-white" aria-current="page" href="beallitasok.php">Beállítások
+            </a>
           </li>
         </ul>
       </div>
