--- a/bodymap_male.html
+++ b/bodymap_male.html
@@ -9,23 +9,23 @@
 <body>
   <section id="bodymap">
     <div class="container">   
-       <!--<div class="row"> </div>-->
-          <!--<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-          </div>-->
-            <!-- Bal oldali nézet: hátsó -->
-            <div class="view">
-              <img src="img/man_musculature_back.png" usemap="#testmap" id="imgBack">
-              <canvas id="overlay1" width="600" height="1280"></canvas>
+          <div class="view">
+            <img src="img/man_musculature_back.png" usemap="#testmap" id="imgBack">
+            <canvas id="overlay1" width="600" height="1280"></canvas>
+          </div>
+          <div class="view">
+            <img src="img/man_musculature_front.png" usemap="#testmap2" id="imgFront">
+            <canvas nvas id="overlay2" width="600" height="1280"></canvas>
+          </div>
+          <!--<div class="row"> 
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
             </div>
-          <!--<div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
-          </div>-->
-            <!-- Jobb oldali nézet: elülső -->
-            <div class="view">
-              <img src="img/man_musculature_front.png" usemap="#testmap2" id="imgFront">
-              <canvas id="overlay2" width="600" height="1280"></canvas>
+            <div class="col-xs-12 col-sm-6 col-md-6 col-lg-6 col-xl-6 col-xxl-6">
             </div>
-      
+          </div>-->
 
+
+    
         <map name="testmap">
             <!-- Vádlik -->
             <area shape="poly" title="bal vádli 1" data-group="vadli"
