gyakori kerdesek atirasa,ai tokoenek generelasa

--- a/header.html
+++ b/header.html
@@ -24,7 +24,7 @@
             <a class="nav-link active text-white" aria-current="page" href="stresszkezeles.php">Stresszkezelés</a>
           </li>
           <li class="nav-item">
-            <a class="nav-link active text-white" aria-current="page" href="beallitasok.php">Beállítások
+            <a class="nav-link active text-white" aria-current="page" href="beallitasok.php">Fiók adatok
             </a>
           </li>
         </ul>
