--- a/footer.html
+++ b/footer.html
@@ -64,8 +64,8 @@
             </li>
           </ul>
         </div>
-        <div class="col-6 text-center">
-            <p class="m-0 p-0"> <a href="adatkezeles.php" style="color: #fff;" target="_blank">Adatkezelési tájékoztató</a></p>
+        <div class="col-12 text-center">
+            <p  style="margin: 0; padding: 2rem 0 0 0;"> <a href="adatkezeles.php" style="color: #fff; text-decoration: none;" target="_blank">Adatkezelési tájékoztató</a></p>
         </div>
       </div>
     </div>
