--- a/footer.html
+++ b/footer.html
@@ -64,8 +64,8 @@
             </li>
           </ul>
         </div>
-        <div class="col-12 text-center">
-            <p  style="margin: 0; padding: 2rem 0 0 0;"> <a href="adatkezeles.php" style="color: #fff; text-decoration: none;" target="_blank">Adatkezelési tájékoztató</a></p>
+        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center" id="footer-copyright">
+            <p  style="margin: 0; padding: 2rem 0 0 0rem;"> <a href="adatkezeles.php" style="color: #fff; text-decoration: none;" target="_blank">Adatkezelési tájékoztató</a></p>
         </div>
       </div>
     </div>
