--- a/footer.html
+++ b/footer.html
@@ -14,7 +14,7 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4" id="footer-oszlop3">
               <h5>Iratkozz fel hírlevelünkre!</h5>
-              <form id="newsletter-form">
+              <form id="newsletter-form" action="<?php htmlspecialchars($_SERVER["PHP_SELF"])?>" method="post">
                   <div class="footer-emailbox">
                       <input type="email" class="footer-emailmezo" id="email" name="email" placeholder="pelda@mind.fit" autocomplete="off" required>
                       <input class="footer-emailgomb" value="Küldés" type="submit">
