--- a/footer.html
+++ b/footer.html
@@ -14,7 +14,7 @@
             </div>
             <div class="col-xs-12 col-sm-12 col-md-4 col-lg-4 col-xl-4 col-xxl-4" id="footer-oszlop3">
               <h5>Iratkozz fel hírlevelünkre!</h5>
-              <form id="newsletter-form" action="<?php htmlspecialchars($_SERVER["PHP_SELF"])?>" method="post">
+              <form id="newsletter-form" action="subscribe.php" method="post">
                   <div class="footer-emailbox">
                       <input type="email" class="footer-emailmezo" id="email" name="email" placeholder="pelda@mind.fit" autocomplete="off" required>
                       <input class="footer-emailgomb" value="Küldés" type="submit">
@@ -25,7 +25,7 @@
     </div>
     <div class="container-fluid" id="footer-icons">
       <div class="row me-0 align-items-center">
-        <div class="col-6">
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6">
           <ul class="social-icons">
             <li>
               <a href="">
@@ -64,8 +64,8 @@
             </li>
           </ul>
         </div>
-        <div class="col-12 col-sm-12 col-md-12 col-lg-12 col-xl-12 col-xxl-12 text-center" id="footer-copyright">
-            <p  style="margin: 0; padding: 2rem 0 0 0rem;"> <a href="adatkezeles.php" style="color: #fff; text-decoration: none;" target="_blank">Adatkezelési tájékoztató</a></p>
+        <div class="col-xs-12 col-sm-12 col-md-6 col-lg-6 text-center" id="footer-copyright">
+            <p  style="margin: 0; padding: 2rem 0 0 0rem;"> <a href="adatkezeles.php" class="atajfot" target="_blank">Adatkezelési tájékoztató</a></p>
         </div>
       </div>
     </div>
